Added links for Zeal portfolio piece

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Josh Peachey | Software Developer</title>
     <!--GOOGLE FONTS-->
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Libre+Baskerville:ital@0;1&family=Work+Sans:wght@200;300;500&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Libre+Baskerville:ital@0;1&family=Work+Sans:wght@200;300;500&display=swap");
     </style>
 
     <!--- FONT AWESOME & ICONS-->
@@ -135,6 +135,20 @@
 
       <div class="grid-container">
         <div class="project-1">
+          <img id="project-image" src="media/images/Zeal_imagery.png" />
+
+          <a class="portfolio-link" href="https://github.com/Peach-24/zeal_app">
+            <h4 class="proj-name">Zeal - Mobile App for Creative Clubs</h4></a
+          >
+          <p class="proj-desc">
+            For a final group project on my coding bootcamp, three others and I
+            collaborated on a mobile app that allows friends to form digital
+            activity clubs where they can share and discuss their work. It's an
+            online, pandemic-proof, version of a photography club where people
+            can partake in a variety of photography challenges as a group.
+          </p>
+        </div>
+        <div class="project-2">
           <img
             id="project-image"
             src="./media/images/portfoli-NBA-GM-sim.png"
@@ -154,28 +168,6 @@
             improvements planned.
           </p>
         </div>
-        <div class="project-2">
-          <img
-            id="project-image"
-            src="media/images/Northcoders-news-project-thumb.png"
-          />
-          <a class="portfolio-link" href="https://nc-news-peach-24.netlify.app"
-            ><h4 class="proj-name">Northcoders News platform</h4></a
-          >
-
-          <p class="proj-desc">
-            After building a fully functioning API for a fictional Northcoders
-            News website, I got to work on creating a React-based frontend to
-            interact with it. For the
-            <a href="https://nc-news-api-jp.herokuapp.com/api"
-              >nc-news-backend</a
-            >, I used packages such as Express, Axios and Knex to assist with
-            HTTP requests, and demonstrated an appreciation for the MVC model.
-            The frontend is responsive and has user experience at the central
-            focus.
-          </p>
-        </div>
-
         <div class="project-3">
           <img
             id="project-image"
@@ -194,17 +186,25 @@
             experience in various ways.
           </p>
         </div>
-
         <div class="project-4">
-          <img id="project-image" src="media/images/API-thumbnail.png" />
-          <h4 class="proj-name">Zeal - Mobile App for Creative Clubs</h4>
+          <img
+            id="project-image"
+            src="media/images/Northcoders-news-project-thumb.png"
+          />
+          <a class="portfolio-link" href="https://nc-news-peach-24.netlify.app"
+            ><h4 class="proj-name">Northcoders News platform</h4></a
+          >
 
           <p class="proj-desc">
-            For a final group project on my coding bootcamp, three others and I
-            collaborated on a mobile app that allows friends to form digital
-            activity clubs where they can share and discuss their work. It's an
-            online, pandemic-proof, version of a book, music, or photography
-            club.
+            After building a fully functioning API for a fictional Northcoders
+            News website, I got to work on creating a React-based frontend to
+            interact with it. For the
+            <a href="https://nc-news-api-jp.herokuapp.com/api"
+              >nc-news-backend</a
+            >, I used packages such as Express, Axios and Knex to assist with
+            HTTP requests, and demonstrated an appreciation for the MVC model.
+            The frontend is responsive and has user experience at the central
+            focus.
           </p>
         </div>
       </div>
