Updated footer and Form intro text

--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
       <h3 data-aos="zoom">Contact</h3>
 
       <p id="form-text">
-        <strong>But what about you?</strong> Feel free to reach out, for
-        whatever reason, by filling out the form below.
+        <strong>But what about you?</strong> Feel free to reach out for whatever
+        reason by filling out the form below.
       </p>
       <br />
       <form
@@ -371,14 +371,14 @@
     <!---footer-->
 
     <footer>
-      <p id="footer-text">Josh Peachey - 2020</p>
+      <p id="footer-text">Josh Peachey - 2021</p>
     </footer>
 
     <!---SCRIPTS-->
     <script src="./JS/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-      AOS.init({ duration: 2500 });
+      AOS.init({ duration: 1300 });
     </script>
   </body>
 </html>
