Updated projects to include Album Club

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <h3 id="projects-title" data-aos="zoom">My Projects</h3>
 
       <div class="grid-container">
-        <div class="project-1">
+        <div class="projectBox project-1">
           <img id="project-image" src="media/images/Zeal_imagery.png" />
 
           <a class="portfolio-link" href="https://github.com/Peach-24/zeal_app">
@@ -148,7 +148,27 @@
             can partake in a variety of photography challenges as a group.
           </p>
         </div>
-        <div class="project-2">
+        <div class="projectBox project-2">
+          <img id="project-image" src="media/images/album_club_thumb.jpeg" />
+          <a
+            class="portfolio-link"
+            href="https://github.com/Peach-24/album-club"
+            ><h4 class="proj-name">Album Club</h4></a
+          >
+
+          <p class="proj-desc">
+            A
+            <a href="https://album-club.netlify.app/"
+              >password-protected web app
+            </a>
+            for my friends and I to use for our weekly album listening club.
+            Built with React, the platform uses Firebase for a database and
+            password auth, and Cypress for testing. This app is in use by my
+            friends who take turns suggesting albums that we all listen to, and
+            then submit reviews for. Further developments planned.
+          </p>
+        </div>
+        <div class="projectBox project-3">
           <img
             id="project-image"
             src="./media/images/portfoli-NBA-GM-sim.png"
@@ -168,7 +188,7 @@
             improvements planned.
           </p>
         </div>
-        <div class="project-3">
+        <div class="projectBox project-4">
           <img
             id="project-image"
             src="media/images/cli-pokemon-battle-thumb.png"
@@ -186,7 +206,7 @@
             experience in various ways.
           </p>
         </div>
-        <div class="project-4">
+        <!-- <div class="projectBox project-4">
           <img
             id="project-image"
             src="media/images/Northcoders-news-project-thumb.png"
@@ -206,7 +226,7 @@
             The frontend is responsive and has user experience at the central
             focus.
           </p>
-        </div>
+        </div> -->
       </div>
     </section>
 
