Changed Zeal heading in Projects

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <img id="project-image" src="media/images/Zeal_imagery.png" />
 
           <a class="portfolio-link" href="https://github.com/Peach-24/zeal_app">
-            <h4 class="proj-name">Zeal - Mobile App for Creative Clubs</h4></a
+            <h4 class="proj-name">Zeal - mobile photography app</h4></a
           >
           <p class="proj-desc">
             For a final group project on my coding bootcamp, three others and I
