CSS Tweaks and adding to tech stack

--- a/index.html
+++ b/index.html
@@ -104,25 +104,25 @@
             </p>
           </div>
 
-          <div id="outer-box">
+          <div id="lang-outer-box">
             <h4 id="technologies">Technologies</h4>
             <img
               class="lang-logo"
               src="media/logos/480px-JavaScript-logo.png"
             />
             <img class="lang-logo" src="media/logos/HTML5_Logo_512.png" />
-
-            <img class="lang-logo" src="media/logos/postgres-logo.png" />
-
             <img
               class="lang-logo"
               src="media/logos/CSS3_logo_and_wordmark.svg.png"
             />
             <img class="lang-logo" src="media/logos/react-logo.png" />
+            <img class="lang-logo" src="media/logos/postgres-logo.png" />
+            <img class="lang-logo" src="media/logos/node_js.png" />
             <img
               class="lang-logo"
               src="media/logos/jest-logo-F9901EBBF7-seeklogo.com.png"
             />
+            <img class="lang-logo" src="media/logos/cypress_logo.png" />
           </div>
         </div>
       </div>
@@ -138,7 +138,7 @@
           <img id="project-image" src="media/images/Zeal_imagery.png" />
 
           <a class="portfolio-link" href="https://github.com/Peach-24/zeal_app">
-            <h4 class="proj-name">Zeal - mobile photography app</h4></a
+            <h4 class="proj-name">Zeal</h4></a
           >
           <p class="proj-desc">
             For a final group project on my coding bootcamp, three others and I
