Added alt tags and set meta desc

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="description" content="A portfolio website displaying the software development work of Josh Peachey."/>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -37,7 +38,7 @@
       <div id="introduction">
         <div id="hero-block">
           <div id="hero-left">
-            <img src="./media/images/jp-cartoon.png" alt="josh" id="main-img" />
+            <img src="./media/images/jp-cartoon.png" alt="josh-headshot" id="main-img" />
           </div>
           <div id="hero-right">
             <h1 id="name">Josh Peachey</h1>
@@ -69,7 +70,7 @@
           class="story-img"
           id="smiley-me"
           src="media/images/josh_peachey.jpg"
-          alt="software developer"
+          alt="josh-developer"
         />
         <div id="about-container">
           <div class="about-pars" data-aos="fade-up" data-aos-delay="500">
@@ -109,20 +110,22 @@
             <img
               class="lang-logo"
               src="media/logos/480px-JavaScript-logo.png"
+              alt="javascript-logo"
             />
-            <img class="lang-logo" src="media/logos/HTML5_Logo_512.png" />
+            <img class="lang-logo" alt="html-logo" src="media/logos/HTML5_Logo_512.png" />
             <img
               class="lang-logo"
               src="media/logos/CSS3_logo_and_wordmark.svg.png"
             />
-            <img class="lang-logo" src="media/logos/react-logo.png" />
-            <img class="lang-logo" src="media/logos/postgres-logo.png" />
-            <img class="lang-logo" src="media/logos/node_js.png" />
+            <img class="lang-logo" alt="react-logo" src="media/logos/react-logo.png" />
+            <img class="lang-logo" alt="postgres-logo" src="media/logos/postgres-logo.png" />
+            <img class="lang-logo" alt="nodeJS-logo" src="media/logos/node_js.png" />
             <img
               class="lang-logo"
               src="media/logos/jest-logo-F9901EBBF7-seeklogo.com.png"
+              alt="jest-logo"
             />
-            <img class="lang-logo" src="media/logos/cypress_logo.png" />
+            <img class="lang-logo" src="media/logos/cypress_logo.png" alt="cypress-logo"/>
           </div>
         </div>
       </div>
@@ -135,7 +138,7 @@
 
       <div class="grid-container">
         <div class="projectBox project-1">
-          <img id="project-image" src="media/images/Zeal_imagery.png" />
+          <img id="project-image" src="media/images/Zeal_imagery.png" alt="zeal-thumbnail" />
 
           <a class="portfolio-link" href="https://github.com/Peach-24/zeal_app">
             <h4 class="proj-name">Zeal</h4></a
@@ -149,7 +152,7 @@
           </p>
         </div>
         <div class="projectBox project-2">
-          <img id="project-image" src="media/images/album_club_thumb.jpeg" />
+          <img id="project-image" src="media/images/album_club_thumb.jpeg" alt="album-club-thumbnail"/>
           <a
             class="portfolio-link"
             href="https://github.com/Peach-24/album-club"
@@ -172,6 +175,7 @@
           <img
             id="project-image"
             src="./media/images/portfoli-NBA-GM-sim.png"
+            alt="nba-general-manager-thumbnail"
           />
           <a
             class="portfolio-link"
@@ -196,6 +200,7 @@
           <a
             class="portfolio-link"
             href="https://github.com/Peach-24/pokemon-battle-game"
+            alt="pokemon-battle-thumbnail"
             ><h4 class="proj-name">CLI - Pokemon Battle Game</h4></a
           >
           <p class="proj-desc">
@@ -206,27 +211,6 @@
             experience in various ways.
           </p>
         </div>
-        <!-- <div class="projectBox project-4">
-          <img
-            id="project-image"
-            src="media/images/Northcoders-news-project-thumb.png"
-          />
-          <a class="portfolio-link" href="https://nc-news-peach-24.netlify.app"
-            ><h4 class="proj-name">Northcoders News platform</h4></a
-          >
-
-          <p class="proj-desc">
-            After building a fully functioning API for a fictional Northcoders
-            News website, I got to work on creating a React-based frontend to
-            interact with it. For the
-            <a href="https://nc-news-api-jp.herokuapp.com/api"
-              >nc-news-backend</a
-            >, I used packages such as Express, Axios and Knex to assist with
-            HTTP requests, and demonstrated an appreciation for the MVC model.
-            The frontend is responsive and has user experience at the central
-            focus.
-          </p>
-        </div> -->
       </div>
     </section>
 
@@ -255,7 +239,7 @@
           </p>
         </div>
         <div class="story-card" data-aos="fade-up">
-          <img class="story-img" src="media/images/jon-corner.jpg" />
+          <img class="story-img" src="media/images/jon-corner.jpg" alt="john-corner"/>
           <div id="blog-preview">
             <h5 class="story-title">
               <a
@@ -274,7 +258,7 @@
           </div>
         </div>
         <div class="story-card" data-aos="fade-up">
-          <img class="story-img" src="media/images/katy-social-chain.jpeg" />
+          <img class="story-img" src="media/images/katy-social-chain.jpeg" alt="katy-leeson"/>
           <div id="blog-preview">
             <h5 class="story-title">
               <a
@@ -294,7 +278,7 @@
         </div>
 
         <div class="story-card" data-aos="fade-up">
-          <img class="story-img" src="media/images/aine-featured-dcf.jpeg" />
+          <img class="story-img" src="media/images/aine-featured-dcf.jpeg" alt="aine-mctiernan" />
           <div id="blog-preview">
             <h5 class="story-title">
               <a
@@ -313,7 +297,7 @@
           </div>
         </div>
         <div class="story-card" data-aos="fade-up">
-          <img class="story-img" src="media/images/stuart-clarke-hi-res.jpg" />
+          <img class="story-img" src="media/images/stuart-clarke-hi-res.jpg" alt="stuart-clarke" />
           <div id="blog-preview">
             <h5 class="story-title">
               <a
