Added aria-label and further accessibility alt tags

--- a/index.html
+++ b/index.html
@@ -47,16 +47,19 @@
           </div>
         </div>
         <div id="hero-icons-box">
-          <a href="https://github.com/Peach-24" target="_blank"
+          <a href="https://github.com/Peach-24" target="_blank" alt=
+          'Github-profile'
             ><i id="hero-icon" class="fab fa-github"></i
           ></a>
-          <a href="https://twitter.com/peach_dev" target="_blank"
-            ><i id="hero-icon" class="fab social fa-twitter"></i
+          <a href="https://twitter.com/peach_dev" target="_blank" alt=
+          'twitter-profile'>
+            <i id="hero-icon" class="fab social fa-twitter"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/josh-peachey-profile/"
-            target="_blank"
-            ><i id="hero-icon" class="fab fa-linkedin"></i
+            target="_blank" alt=
+            'linkedIn-profile'
+            ><i id="hero-icon" class="fab fa-linkedin" ></i
           ></a>
         </div>
       </div>
@@ -116,6 +119,7 @@
             <img
               class="lang-logo"
               src="media/logos/CSS3_logo_and_wordmark.svg.png"
+              alt="css-logo"
             />
             <img class="lang-logo" alt="react-logo" src="media/logos/react-logo.png" />
             <img class="lang-logo" alt="postgres-logo" src="media/logos/postgres-logo.png" />
@@ -196,11 +200,11 @@
           <img
             id="project-image"
             src="media/images/cli-pokemon-battle-thumb.png"
+            alt="pokemon-battle-thumbnail"
           />
           <a
             class="portfolio-link"
             href="https://github.com/Peach-24/pokemon-battle-game"
-            alt="pokemon-battle-thumbnail"
             ><h4 class="proj-name">CLI - Pokemon Battle Game</h4></a
           >
           <p class="proj-desc">
@@ -365,7 +369,7 @@
             placeholder="Hi Josh..."
           ></textarea>
         </div>
-        <button id="contact-button" type="submit">
+        <button id="contact-button" type="submit" aria-label="send-message">
           <i class="fas fa-paper-plane"></i>
         </button>
         <div id="status"></div>
